# llm-playground

./: Makefile  README.md  pyproject.toml
llm_playground/: langchain_local.py  ollama.py
