[tool.poetry]
name = "llm-playground"
version = "0.1.0"
description = ""
authors = ["Subash <subashprabakar@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "0.28.1"
langchain = "0.0.325"
langchain-experimental = "0.0.36"
wikipedia = "1.4.0"
pandas = "2.0.3"
tabulate = "0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
